--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#68C181</color>
-    <color name="colorPrimaryDark">#0E7683</color>
-    <color name="colorAccent">#68C181</color>
+    <color name="colorPrimary">#E9DEE2</color>
+    <color name="colorPrimaryDark">#7C1D3D</color>
+    <color name="colorAccent">#E9DEE2</color>
     <color name="colorAlternate">#FFFFFF</color>
     <color name="colorAlternateDark">#000036</color>
+
+    <color name="colorLogin">#A7C9F7</color>
+    <color name="colorMenu">#D8F9FF</color>
 
     <color name="colorScrapknot">#68C181</color>
     <color name="colorScrapknotAlternate">#3B131E</color>
