--- a/app/src/main/res/menu/navigation_user.xml
+++ b/app/src/main/res/menu/navigation_user.xml
@@ -4,26 +4,21 @@
     <item
         android:id="@+id/navigation_info"
         android:icon="@drawable/ic_info"
-        android:title="" />
+        android:title="@string/title_info" />
 
     <item
-        android:id="@+id/navigation_new"
-        android:icon="@drawable/ic_latest"
-        android:title="" />
+        android:id="@+id/navigation_events"
+        android:icon="@drawable/ic_events"
+        android:title="@string/title_events" />
 
     <item
-        android:id="@+id/navigation_main"
-        android:icon="@drawable/ic_main"
-        android:title="" />
-
-    <item
-        android:id="@+id/navigation_message"
-        android:icon="@drawable/ic_message"
-        android:title="" />
+        android:id="@+id/navigation_matches"
+        android:icon="@drawable/ic_matches"
+        android:title="@string/title_matches" />
 
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_profile"
-        android:title="" />
+        android:title="@string/title_profile" />
 
 </menu>
