added match tabs

--- a/app/src/main/res/layout/fragment_match_events.xml
+++ b/app/src/main/res/layout/fragment_match_events.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context="com.gretel.zingo.view.activities.FormActivity.UserFormActivity">
+    android:background="@color/colorPrimary">
 
     <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
@@ -15,7 +13,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Info Page"
+            android:text="Matches Events Page"
             android:gravity="center"
             android:textSize="40sp"
             app:layout_constraintBottom_toBottomOf="parent"
