--- a/app/src/main/res/menu/navigation_user.xml
+++ b/app/src/main/res/menu/navigation_user.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/navigation_info"
         android:icon="@drawable/ic_info"
-        android:title="@string/title_info" />
+        android:title="@string/title_about_us" />
 
     <item
         android:id="@+id/navigation_events"
